修改行情图表页面的参数传递

--- a/hybrid/html/index.html
+++ b/hybrid/html/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <!--头部-->
-  <div class="header">
+  <!-- <div class="header">
     <div class="chartHeader">
         <div class="headerRow backArrow">
           <span class="iconfont back">&#xe607;</span>
@@ -30,7 +30,7 @@
     </div>
     <div class="chartHeaderPlaceHolder">
     </div>
-  </div>
+  </div> -->
   <!--动态行情价格-->
   <div class="marketChartInfo">
     <div class="marketInfo marketInfo_left">
