--- a/hybrid/html/index.html
+++ b/hybrid/html/index.html
@@ -35,8 +35,12 @@
   <div class="marketChartInfo">
     <div class="marketInfo marketInfo_left">
       <div class="marketName">
-        <p class="name"><span>-</span><i class="iconfont backs">&#xe601;</i></p>
-        <span class="code">-</span>
+        <p class="nameAndCode">
+          <span class="name">-</span>
+          <span class="code">-</span>
+          <i class="iconfont backs">&#xe601;</i>
+          <p class="clearfloat"></p>
+        </p>
       </div>
       <div class="marketClear"></div>
       <div class="marketPrice_ratio" id="decimalPrice">
@@ -73,13 +77,13 @@
   <div class="chart">
     <div class="timeSelect">
       <div class="times" id="interval">
-        <span class="active" data-value="1">分时</span>
-        <span data-value="5">5分钟</span>
+        <span class="active" data-value="">分时</span>
+        <span data-value="handicap">盘口</span>
         <!-- <span data-value="15">15分钟</span> -->
-        <span data-value="30">30分钟</span>
-        <span data-value="60">1小时</span>
-        <span data-value="240">4小时</span>
-        <span data-value="1440">日线</span>
+        <span data-value="day">日线</span>
+        <span data-value="1">1分钟</span>
+        <span data-value="5">5分钟</span>
+        <span data-value="15">15分钟</span>
       </div>
     </div>
     <div id="tv_chart_container"></div>
@@ -182,15 +186,14 @@
     </div>
   </div>
   <script src="./js/zepto.min.js"></script>
-  <script src="./js/portView.js"></script>
   <script src="./js/tpl.js"></script>
+  <script src="./js/aes.js"></script>
+  <script src="./js/service.js"></script>
   <script src="./js/marketMq.js"></script>
   <!--封装了一个发布订阅模式-->
   <script src="./js/event.js"></script>
   <!--图表库js-->
   <script src="./charting_library/charting_library.min.js"></script>
-  <script src="./js/aes.js"></script>
-  <script src="./js/service.js"></script>
   <!--websocket-->
   <script src="./js/websocket.js"></script>
   <!--图表数据获取-->
